cluster/infra/envoy-system/gateway/main/policy/security-policy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: enforce-authelia-main
spec:
  extAuth:
    failOpen: false # If authelia not available fail.
    headersToExtAuth:
      - X-Forwarded-Proto
      - authorization
      - proxy-authorization
      - accept
      - cookie

    http:
      path: /api/authz/ext-authz/
      backendRefs:
        - group: ''
          kind: Service
          name: authelia
          namespace: default
          port: 80

  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main
